Add OpenAPI spec
